<resources>
    <string name="app_name">COBA_group4</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile_page_fragment">Profile Page</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="event_type">Event Type</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="zipCode">Zip</string>
    <string name="state">State</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homepage">Homepage</string>
    <string name="report_occurrence">Report Occurrence</string>
    <string name="_911">911</string>
    <string name="search">Search</string>
    <string name="forums">Forums</string>
    <string name="chat">Chat</string>
    <string name="map">Map</string>
    <string name="occurrence_data">Occurrence Data</string>
    <string name="profile_page">Profile Page</string>
    <string name="criminal_occurrence_reporting_app">Criminal Occurrence Reporting App</string>

    <!-- Place Holder -->
    <string name="Create">Create</string>
    <string name="Title">Title</string>

    <string name="exitbutton">Return</string>
    <string name="crimetype">Crime Type</string>
    <string name="todo">To Do</string>
    <string name="location">Location</string>
    <string name="create_forum">Create Forum</string>
</resources>