<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_homepage"
            android:title="@string/homepage" />
        <item
            android:id="@+id/nav_reportOccurrence"
            android:icon="@drawable/ic_report_occurrence"
            android:title="@string/report_occurrence" />
        <item
            android:id="@+id/nav_911"
            android:icon="@drawable/ic_911"
            android:title="@string/_911" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_forums"
            android:icon="@drawable/ic_forum"
            android:title="@string/forums" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_forum_messager"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_occurrenceData"
            android:icon="@drawable/ic_occurrence_data"
            android:title="@string/occurrence_data" />
        <item
            android:id="@+id/nav_profilePage"
            android:icon="@drawable/ic_profile_page"
            android:title="@string/profile_page" />
    </group>

</menu>