<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="604dp"
        android:baselineAligned="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/exitbutton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F10404"
            android:gravity="center"
            android:text="@string/crimetype"

            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Crime Type" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:background="#FF7878"
            android:text="@string/todo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="XXXXX" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/location"

            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Location" />

        <TextView
            android:id="@+id/textView5"
            android:gravity="center"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#03A9F4"
            android:text="@string/todo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="XXXXXX" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9C27B0"
            android:gravity="center"
            android:text="@string/time"

            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Time" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:gravity="center"

            android:layout_height="wrap_content"
            android:background="#CE75DD"

            android:text="@string/todo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="XXXXXX" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEB3B"
            android:gravity="center"
            android:text="@string/description"

            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:text="Description" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="#EDE069"
            android:text="@string/crimetype"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="XXXXXX" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>